# mipt2-TPGame

./: CMakeLists.txt  README.md  action.cpp  action.h  additionals.cpp  additionals.h  availableActions.cpp  availableUnits.cpp  game.cpp  game.h  help.txt  main.cpp  player.cpp  player.h  playerCalc.cpp  playerCalc.h  resourceList.cpp  resources.cpp  resources.h  unit.cpp  unit.h
